fix spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ footer ul li {
    .container {
       padding: 0 20px;
       margin: 0 auto;
-      width: 95%;
+      width: 97%;
    }
 
    header .logo {
@@ -142,6 +142,13 @@ footer ul li {
    .box {
       padding: 20px;
       margin: 30px 0;
+   }
+
+   .box img{
+      margin: 30px 0;
+   }
+   main{
+      text-align: center;
    }
 
    main .flex{
